--- a/Girpod/Dockerfile_Main
+++ b/Girpod/Dockerfile_Main
@@ -74,18 +74,9 @@ RUN sudo echo "Running 'sudo' for giri: success" && \
 # Custom PATH additions
 ENV PATH=$HOME/.local/bin:/usr/games:$PATH
 
-RUN mkdir ~/.cache && /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-ENV PATH=/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin/:$PATH
-ENV MANPATH="$MANPATH:/home/linuxbrew/.linuxbrew/share/man"
-ENV INFOPATH="$INFOPATH:/home/linuxbrew/.linuxbrew/share/info"
-ENV HOMEBREW_NO_AUTO_UPDATE=1
-
-RUN sudo apt remove -y cmake \
-    && brew install cmake
-
 # My Custom Setup
 USER giri
-
+ENV USER giri
 # Install custom tools, runtime, etc.
 RUN sudo apt-get update -y && sudo apt-get upgrade -y
 
